# tc-drive

./: .gitignore  Program.cs  TrueCryptReader.csproj
.github/workflows/: release.yml
tc-app/: package-lock.json  package.json
tc-app/specs/: creator.md  reader.md
tc-app/src/: App.tsx  index.css
tc-app/src-tauri/: Cargo.toml  tauri.conf.json
tc-app/src-tauri/src/: lib.rs  main.rs
tc-app/src-tauri/src/commands/: mod.rs  volume_commands.rs
tc-app/src-tauri/src/core/: cipher.rs  constants.rs  crc32.rs  decrypted_stream.rs  filesystem.rs  key_derivation.rs  mod.rs  mounter.rs  vhd.rs  volume.rs  volume_header.rs  xts.rs
tc-app/src/components/: FileBrowser.tsx  Home.tsx  ImagePreviewModal.tsx  LockScreen.tsx  MountPanel.tsx  VolumeInfoPanel.tsx  VolumeView.tsx
tc-app/src/components/ui/: sonner.tsx
tc-dotnet/: Crc32.cs  DecryptedVolumeStream.cs  EncryptionAlgorithm.cs  KeyDerivation.cs  Program.cs  TrueCryptConstants.cs  TrueCryptReader.csproj  TrueCryptVolume.cs  VolumeCreator.cs  VolumeHeader.cs  VolumeMounter.cs  XtsDecryptor.cs  XtsEncryptor.cs
