[package]
name = "tc-drive"
version = "0.1.0"
description = "TrueCrypt Volume Reader"
authors = ["you"]
edition = "2021"

[lib]
name = "tc_drive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (RustCrypto ecosystem)
aes = "0.8"
serpent = "0.5"
twofish = "0.7"
cipher = "0.4"
pbkdf2 = "0.12"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
whirlpool = "0.10"

# Utilities
crc32fast = "1"
byteorder = "1"
base64 = "0.22"

# Filesystem
fatfs = "0.3"
ntfs = "0.4"

